Created Reset password page when the user click on the link and will rout here. will Verify password and save changes in database. When updated email will be sent out.

--- a/src/main/resources/templates/SignUp/login.html
+++ b/src/main/resources/templates/SignUp/login.html
@@ -45,7 +45,7 @@
                                 <aside class="d-flex">
                                     <label class="form-label" for="userPassword">Password</label>
                                     <!==== Forgot Password ====>
-                                    <a class="small text-muted ms-auto" th:href="@{#}">Forgot password?</a>
+                                    <a class="small text-muted ms-auto" th:href="@{/forgot_password}">Forgot password?</a>
                                 </aside>
                             </section>
                             <!==== Form Container - Submit Button ====>
