--- a/src/main/resources/templates/SignUp/forgotPassword.html
+++ b/src/main/resources/templates/SignUp/forgotPassword.html
@@ -25,7 +25,7 @@
             <input type="email" name="email" class="form-control" id="forgetPasswordInputEmail" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn" id="register-form-submit-btn">Submit</button>
     </form>
 </main>
 
