Added padding and margin ot the bottom of the language logos.

--- a/src/main/resources/templates/base/about.html
+++ b/src/main/resources/templates/base/about.html
@@ -35,7 +35,7 @@
 </div>
 
 <!==== Languages Used =====>
-<section id="languages" class="languages section-bg">
+<section id="languages" class="languages section-bg mb-5 pb-5">
   <div class="container">
 
     <div class="row">
