--- a/src/main/resources/static/css/singleBookStyleSheet.css
+++ b/src/main/resources/static/css/singleBookStyleSheet.css
@@ -211,9 +211,9 @@
     width: 80%;
     max-width: 620px;
     background-color: rgba(255, 255, 255, 0.24);
-    margin: 0 auto;
+    margin: 0 auto 100px auto;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    padding: 12px 24px;
+    padding: 24px;
     border-radius: 25px;
 }
 .services #writeAReviewContainer h3{
