--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -78,7 +78,7 @@
 
                 <!-- This is going to be the container for the scroll -->
                 <div id="WholeSameGenreBookContainer">
-                    <section class="favorite-book-container" th:each="favBook:${bookGenre}">
+                    <section class="favorite-book-container" th:each="favBook:${bookGenre}" th:if="${favBook != singleBookInfo}">
                         <a th:href="@{/single/{id}(id = ${favBook.getId()})}">
                             <img th:src="${favBook.getCover_page()}" th:alt="${favBook.getTitle()}" class="same-genre-book-cover">
                             <p>
