--- a/src/main/resources/static/css/navbarStylesheet.css
+++ b/src/main/resources/static/css/navbarStylesheet.css
@@ -100,7 +100,7 @@
     }
 }
 
-/*========== Logged In ==========*/
+/*================= Logged In ================*/
 .navbar{
     display: flex;
     flex-direction: column;
@@ -111,6 +111,19 @@
     padding: 20px 0;
 }
 
+/*== Notification Bell Icon ===*/
+.navbar .container #navbarNavAltMarkup .navbar-nav .navbar-notification-icon{
+    height: 100%;
+    width: 42px;
+    transition: all 0.4s ease-in-out;
+}
+/*== Notification Bell Icon Hover ===*/
+.navbar .container #navbarNavAltMarkup .navbar-nav .navbar-notification-icon:hover{
+    transform: scale(1.03);
+    filter: drop-shadow(0px 1px 0px #1e1e1e);
+}
+
+    /*=== Search Input ===*/
 .navbar .container #navbarNavAltMarkup .navbar-nav .nav-bar-search-input-form{
     position: relative;
     margin-right: 24px;
@@ -127,7 +140,7 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px, rgb(51, 51, 51) 0 0 0 3px;
 }
 
-/*== Cancel button in search for book form ==*/
+/*== Search Input Cancel Button ==*/
 .navbar .container #navbarNavAltMarkup .navbar-nav .nav-bar-search-input-form #search-result-cancel-button{
     position: absolute;
     right: 10px;
