--- a/src/main/resources/templates/partials/loginNavbar.html
+++ b/src/main/resources/templates/partials/loginNavbar.html
@@ -16,6 +16,9 @@
                     <!-- Cancel Button -->
                     <img th:src="@{/img/search-result-cancel.png}" alt="Cancel Search" id="search-result-cancel-button">
                 </section>
+                <!-- Notification Icon -->
+                <img th:if="${!hasNotifications}" th:src="@{/img/notification.png}" alt="No_Notifications" class="navbar-notification-icon">
+                <img th:if="${hasNotifications}" th:src="@{/img/alertNotification.png}" alt="Notifications" class="navbar-notification-icon me-3">
                 <!-- Logout Button-->
                 <a th:href="@{/logout}" class=" btn btn-outline-danger w-25" id="logout-button" >logout</a>
             </div>
