--- a/src/main/resources/static/css/userProfileStylesheet.css
+++ b/src/main/resources/static/css/userProfileStylesheet.css
@@ -1,4 +1,11 @@
-.modal-container form .cancel-delete-button, .modal-container form .main-review-delete-button, .modal-container form .main-review-delete-button, .edit-review-form-container .edit-review-delete-button, .edit-review-form .submitButton, .edit-review-form .edit-review-cancel-button {
+.modal-container form .cancel-delete-button,
+.modal-container form .main-review-delete-button,
+.modal-container form .main-review-delete-button,
+.edit-review-form-container .edit-review-delete-button,
+.edit-review-form .submitButton,
+.edit-review-form .edit-review-cancel-button,
+.addNewFriendForm .addNewFriendButton,
+.unfriendForm .unfriendButton{
     background-color: rgb(169, 169, 169);
     border: 1px solid rgb(169, 169, 169);
     border-radius: 4px;
@@ -23,7 +30,14 @@
     margin: 24px 0 0 0;
 }
 
-.modal-container form .cancel-delete-button:hover, .modal-container form .main-review-delete-button:hover, .modal-container form .main-review-delete-button, .edit-review-form-container .edit-review-delete-button:hover, .edit-review-form .submitButton:hover, .edit-review-form .edit-review-cancel-button:hover {
+.modal-container form .cancel-delete-button:hover,
+.modal-container form .main-review-delete-button:hover,
+.modal-container form .main-review-delete-button,
+.edit-review-form-container .edit-review-delete-button:hover,
+.edit-review-form .submitButton:hover,
+.edit-review-form .edit-review-cancel-button:hover,
+.addNewFriendForm .addNewFriendButton:hover,
+.unfriendForm .unfriendButton:hover{
     background-color: rgb(33, 33, 33);
     border: 1px solid rgb(33, 33, 33);
     color: #fff;
