Created the two buttons to be an add or unfollow form that once pushed it will add the status

--- a/src/main/resources/templates/main/notification.html
+++ b/src/main/resources/templates/main/notification.html
@@ -74,11 +74,11 @@
                         <!-- The Status -->
                         <p th:text="${newFriend.getStatus()}"></p>
                         <!-- Form When Yes to be friend -->
-                        <form th:action="@{/notification/newFriend/{id} (id=${newFriend.getFriendship_id()})}" class="addNewFriendForm" method="post">
+                        <form th:action="@{/notification/newFriend/{id} (id=${newFriend.getFriendshipId()})}" class="addNewFriendForm" method="post">
                             <button type="submit" class="addNewFriendButton">Add a friend</button>
                         </form>
                         <!-- Form When No to be friend -->
-                        <form th:action="@{/notification/unfriend/{id} (id=${newFriend.getFriendship_id()})}" class="unfriendForm" method="post">
+                        <form th:action="@{/notification/unfriend/{id} (id=${newFriend.getFriendshipId()})}" class="unfriendForm" method="post">
                             <button type="submit" class="unfriendButton">Unfollow</button>
                         </form>
                     </div>
