--- a/src/main/resources/static/css/notificationStylesheet.css
+++ b/src/main/resources/static/css/notificationStylesheet.css
@@ -1,4 +1,39 @@
 
+/*======= Notification =======*/
+.mainNotificationSection{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 20px 1em;
+    margin: 0 20px;
+}
+/*=== Notification Body ===*/
+.mainNotificationSection .body-notification{
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+    border-radius: 15px;
+    background-color: rgba(32, 157, 216, 0.15);
+}
+
+/*=== Friend Profile Picture ===*/
+.mainNotificationSection .body-notification .friend-profile-picture {
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+    object-position: center top;
+    border-radius: 15px 15px 0 0;
+}
+/*=== Friend Username ===*/
+.mainNotificationSection .body-notification h4 {
+    font-weight: 600;
+    text-align: center;
+    margin-top: 24px;
+}
+/*=== Friend Username ===*/
+.mainNotificationSection .body-notification .form-containers{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 24px;
+}
 
 .addNewFriendForm .addNewFriendButton{
     background-color: rgba(100, 149, 237, 0.49);
@@ -12,4 +47,30 @@
 .addNewFriendForm .addNewFriendButton:hover{
     background-color: rgba(100, 149, 237, 1);
     border: 1px solid rgba(100, 149, 237, 1);
+}
+
+/*=== Screen smaller then 991px ===*/
+@media (max-width: 991px){
+    /*======= Notification =======*/
+    .mainNotificationSection{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+/*=== Screen smaller then 767px ===*/
+@media (max-width: 767px){
+}
+
+/*=== Screen smaller then 575px ===*/
+@media (max-width: 575px){
+    /*======= Notification =======*/
+    .mainNotificationSection{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    /*=== Friend Profile Picture ===*/
+    .mainNotificationSection .body-notification .friend-profile-picture {
+        width: 100%;
+        height: auto;
+        max-height: 420px;
+    }
 }
