--- a/src/main/resources/static/css/notificationStylesheet.css
+++ b/src/main/resources/static/css/notificationStylesheet.css
@@ -22,11 +22,16 @@
     object-position: center top;
     border-radius: 15px 15px 0 0;
 }
+/*=== Friend anchor ===*/
+.mainNotificationSection .body-notification a {
+    text-decoration: none;
+}
 /*=== Friend Username ===*/
 .mainNotificationSection .body-notification h4 {
     font-weight: 600;
     text-align: center;
     margin-top: 24px;
+    color: #1e1e1e;
 }
 /*=== Friend Username ===*/
 .mainNotificationSection .body-notification .form-containers{
